--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
-        "codeception/codeception": "2.0.*"
+        "codeception/codeception": "2.0.*",
+        "codeception/specify": "^0.4.3"
     },
     "config": {
         "process-timeout": 1800
