--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,15 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "saada/yii2-factory-muffin": "@dev",
-        "league/factory-muffin-faker": "^1.0"
+        "league/factory-muffin-faker": "^1.0",
+        "kartik-v/yii2-editable": "~1.7"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
-        "codeception/codeception": "2.0.*",
+        "codeception/codeception": "^2.2",
         "codeception/specify": "^0.4.3"
     },
     "config": {
