--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "saada/yii2-factory-muffin": "@dev",
         "league/factory-muffin-faker": "^1.0",
-        "kartik-v/yii2-editable": "~1.7"
+        "kartik-v/yii2-editable": "~1.7",
+        "kartik-v/yii2-grid": "~3.1"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
