--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -11,14 +11,16 @@
 class_name: AcceptanceTester
 modules:
     enabled:
-        - PhpBrowser
+#        - PhpBrowser
         - tests\codeception\_support\FixtureHelper
         - tests\codeception\_support\FactoryMuffinHelper
 # you can use WebDriver instead of PhpBrowser to test javascript and ajax.
 # This will require you to install selenium. See http://codeception.com/docs/04-AcceptanceTests#Selenium
 # "restart" option is used by the WebDriver to start each time per test-file new session and cookies,
 # it is useful if you want to login in your app in each test.
-#        - WebDriver
+        - WebDriver:
+            url: http://localhost:8080
+            browser: phantom
     config:
         PhpBrowser:
 # PLEASE ADJUST IT TO THE ACTUAL ENTRY POINT WITHOUT PATH INFO
