--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "kartik-v/yii2-grid": "~3.1",
         "phpro/soap-client":"dev-master",
         "kartik-v/yii2-widgets": "3.4",
-        "kartik-v/yii2-datecontrol": "1.9.4"
+        "kartik-v/yii2-datecontrol": "1.9.4",
+        "kartik-v/yii2-detail-view": "1.7"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
