--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -21,6 +21,7 @@ modules:
         - WebDriver:
             url: http://localhost:8080
             browser: phantom
+        - Asserts
     config:
         PhpBrowser:
 # PLEASE ADJUST IT TO THE ACTUAL ENTRY POINT WITHOUT PATH INFO
