--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
         "codeception/codeception": "^2.2",
-        "codeception/specify": "^0.4.3"
+        "codeception/specify": "^0.4.3",
+        "codeception/verify": "*"
     },
     "config": {
         "process-timeout": 1800
