--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "league/factory-muffin-faker": "^1.0",
         "kartik-v/yii2-editable": "~1.7",
         "kartik-v/yii2-grid": "~3.1",
-        "phpro/soap-client":"dev-master",
+        "phpro/soap-client":"0.1.3",
         "kartik-v/yii2-widgets": "3.4",
         "kartik-v/yii2-datecontrol": "1.9.4",
         "kartik-v/yii2-detail-view": "1.7"
