--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ Thumbs.db
 # composer itself is not needed
 composer.phar
 
+# composer dependencies should be installed in separate envs
+composer.lock
+
 # Mac DS_Store Files
 .DS_Store
 
