--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,10 @@ install:
 # setup application:
 script:
   - |
-    cd web
+    cd tests
+    codecept build
+    cd ../web
     php -S localhost:8080 > /dev/null 2>&1 &
     cd ../tests
-    codecept build
+
     codecept run
