travis run only unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ script:
     cd ../web
     php -S localhost:8080 > /dev/null 2>&1 &
     cd ../tests
-    ../vendor/bin/codecept run
+    ../vendor/bin/codecept run unit
