--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -29,3 +28,4 @@ script:
     php -S localhost:8080 > /dev/null 2>&1 &
     cd ../tests
     ../vendor/bin/codecept run unit
+    ../vendor/bin/codecept run acceptance
