--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,11 @@
         "codeception/codeception": "^2.2",
         "codeception/specify": "^0.4.3",
         "codeception/verify": "*",
-        "jakoch/phantomjs-installer": "2.1.1"
+        "jakoch/phantomjs-installer": "2.1.1",
+        "site5/phantoman": "^1.1"
     },
     "config": {
-        "process-timeout": 1800,
-        "bin-dir": "bin"
+        "process-timeout": 1800
     },
     "scripts": {
         "post-create-project-cmd": [
