--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -39,4 +39,5 @@ extensions:
         - Codeception\Extension\Phantoman
     config:
         Codeception\Extension\Phantoman:
+            path: '/usr/local/bin/phantomjs'
             suites: ['acceptance']
