--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 # setup application:
 before_script:
   - mysql -e 'create database yii2basic_tests;'
-  - tests/codeception/bin/yii migrate
+  - tests/codeception/bin/yii migrate --interactive=0
 script:
   - |
     cd tests
