--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_script:
 script:
   - |
     cd tests
+    ../vendor/bin/codecept build
     cd ../web
     php -S localhost:8080 > /dev/null 2>&1 &
     cd ../tests
