new travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,14 @@ branches:
 services:
   - mysql
 
+sudo: true
+
+before_isntall:
+  - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-linux-x86_64.tar.bz2
+  - tar -xjf phantomjs-1.9.7-linux-x86_64.tar.bz2
+  - sudo rm -rf /usr/local/phantomjs/bin/phantomjs
+  - sudo mv phantomjs /usr/local/phantomjs/bin/phantomjs
+
 install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:~1.1.1"
