comment travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ services:
 
 sudo: true
 
+# installing PhantomJS v1.9.7
 before_isntall:
   - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-linux-x86_64.tar.bz2
   - tar -xjf phantomjs-1.9.7-linux-x86_64.tar.bz2
