--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,12 @@ services:
 
 sudo: true
 
-# installing PhantomJS v1.9.7
+
 before_isntall:
-  - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-linux-x86_64.tar.bz2
-  - tar -xjf phantomjs-1.9.7-linux-x86_64.tar.bz2
-  - sudo rm -rf /usr/local/phantomjs/bin/phantomjs
-  - sudo mv phantomjs /usr/local/phantomjs/bin/phantomjs
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 
 install:
   - travis_retry composer self-update && composer --version
@@ -40,13 +40,12 @@ install:
 before_script:
   - mysql -e 'create database yii2basic_tests;'
   - tests/codeception/bin/yii migrate --interactive=0
+  - php -S localhost:8080 > /dev/null 2>&1 &
+  - sleep 3
 script:
   - |
     cd tests
     ../vendor/bin/codecept build
-    cd ../web
-    php -S localhost:8080 > /dev/null 2>&1 &
-    cd ../tests
     ../vendor/bin/codecept run unit
     ../vendor/bin/codecept run functional
     ../vendor/bin/codecept run acceptance
