--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,6 @@ services:
 
 sudo: true
 
-
-before_isntall:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
-
 install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:~1.1.1"
@@ -41,6 +34,9 @@ before_script:
   - mysql -e 'create database yii2basic_tests;'
   - tests/codeception/bin/yii migrate --interactive=0
   - php -S localhost:8080 > /dev/null 2>&1 &
+  - sleep 3
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - sleep 3
 script:
   - |
