--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,10 @@ before_script:
   - sleep 3
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
+  - sleep 4
+  - "wget http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.0.jar"
+  - "java -jar selenium-server-standalone-2.53.0.jar > /dev/null &"
+  - sleep 5
 script:
   - |
     cd tests
