--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 4
   - "wget http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.0.jar"
-  - "java -jar selenium-server-standalone-2.53.0.jar > /dev/null &"
+  - "java -jar selenium-server-standalone-2.53.0.jar 2>&1 &"
   - sleep 5
 script:
   - |
