--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpro/soap-client":"~0.1.3",
         "kartik-v/yii2-widgets": "3.4",
         "kartik-v/yii2-datecontrol": "1.9.4",
-        "kartik-v/yii2-detail-view": "1.7"
+        "kartik-v/yii2-detail-view": "^1.7"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
