--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
+    "name": "yiisoft/yii2-app-advanced",
+    "description": "Yii 2 Advanced Project Template",
+    "keywords": ["yii2", "framework", "advanced", "project template"],
     "homepage": "http://www.yiiframework.com/",
     "type": "project",
     "license": "BSD-3-Clause",
@@ -15,14 +15,14 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.5",
+        "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "saada/yii2-factory-muffin": "@dev",
         "league/factory-muffin-faker": "^1.0",
         "kartik-v/yii2-editable": "*",
         "kartik-v/yii2-grid": "~3.1",
-        "phpro/soap-client":"~0.1.3",
+        "phpro/soap-client": "~0.1.3",
         "kartik-v/yii2-widgets": "3.4",
         "kartik-v/yii2-datecontrol": "*",
         "kartik-v/yii2-detail-view": "^1.7"
@@ -35,41 +35,19 @@
         "codeception/codeception": "2.1.8",
         "codeception/specify": "^0.4.3",
         "codeception/verify": "*",
-        "jakoch/phantomjs-installer": "2.1.1",
-        "site5/phantoman": "^1.1",
-        "oprudkyi/codeception-events-scripting":"*",
+        "oprudkyi/codeception-events-scripting": "*",
         "php-vcr/php-vcr": "^1.2"
     },
     "config": {
         "process-timeout": 1800
     },
     "extra": {
-        "yii\\composer\\Installer::postCreateProject": {
-            "setPermission": [
-                {
-                    "runtime": "0777",
-                    "web/assets": "0777",
-                    "yii": "0755"
-                }
-            ],
-            "generateCookieValidationKey": [
-                "config/web.php"
-            ]
-        },
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
         }
     },
     "scripts": {
-        "post-install-cmd": [
-            "PhantomInstaller\\Installer::installPhantomJS"
-        ],
-        "post-update-cmd": [
-            "PhantomInstaller\\Installer::installPhantomJS"
-        ],
-        "post-create-project-cmd": [
-            "yii\\composer\\Installer::postCreateProject"
-        ]
+        "post-install-cmd": "php init --env=Development --overwrite=n"
     }
 }
