--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -1,48 +1,11 @@
-actor: Tester
-#coverage:
-#    #c3_url: http://localhost:8080/index-test.php/
-#    enabled: true
-#    #remote: true
-#    #remote_config: '../tests/codeception.yml'
-#    white_list:
-#        include:
-#            - ../models/*
-#            - ../controllers/*
-#            - ../commands/*
-#            - ../mail/*
-#    blacklist:
-#        include:
-#            - ../assets/*
-#            - ../config/*
-#            - ../runtime/*
-#            - ../vendor/*
-#            - ../views/*
-#            - ../web/*
-#            - ../tests/*
+include:
+  - codeception/common
+  - codeception/console
+  - codeception/backend
+  - codeception/frontend
+
 paths:
-    tests: codeception
-    log: codeception/_output
-    data: codeception/_data
-    helpers: codeception/_support
+  log: codeception/_output
+
 settings:
-    bootstrap: _bootstrap.php
-    suite_class: \PHPUnit_Framework_TestSuite
-    memory_limit: 1024M
-    log: true
-    colors: true
-config:
-    # the entry script URL (with host info) for functional and acceptance tests
-    # PLEASE ADJUST IT TO THE ACTUAL ENTRY SCRIPT URL
-    test_entry_url: http://localhost:8080/index-test.php
-extensions:
-    enabled:
-        #- Codeception\Extension\Phantoman
-        - Codeception\Extension\EventsScripting
-    config:
-        Codeception\Extension\Phantoman:
-            path: '/usr/local/bin/phantomjs'
-            suites: ['acceptance']
-        Codeception\Extension\EventsScripting:
-            BeforeAll:
-                - command: ./codeception/bin/yii migrate/down 999999 --interactive=0 >/dev/null && ./codeception/bin/yii migrate/up --interactive=0 > /dev/null
-            suites: 'acceptance'
+  colors: true
