--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,6 @@
         }
     },
     "scripts": {
-        "post-install-cmd": "php init --env=Development --overwrite=n"
+        "post-install-cmd": "php init --env=Production --overwrite=n"
     }
 }
