--- a/tests/codeception/frontend/codeception.yml
+++ b/tests/codeception/frontend/codeception.yml
@@ -14,7 +14,7 @@ settings:
 config:
     # the entry script URL (with host info) for functional and acceptance tests
     # PLEASE ADJUST IT TO THE ACTUAL ENTRY SCRIPT URL
-    test_entry_url: http://localhost:8080/frontend/web/index-test.php
+    test_entry_url: http://localhost:8080/index-test.php
 extensions:
     enabled:
         - Codeception\Extension\EventsScripting
