--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "kartik-v/yii2-widgets": "3.4",
         "kartik-v/yii2-datecontrol": "*",
         "kartik-v/yii2-detail-view": "^1.7",
-        "kartik-v/yii2-export": "^1.2"
+        "kartik-v/yii2-export": "^1.2",
+        "kartik-v/yii2-dynagrid": "^1.4"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
