--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
+# user upload dir
+/frontend/web/uploads
+
 # composer itself is not needed
 composer.phar
 
